--- a/requirements.txt
+++ b/requirements.txt
@@ -1,111 +1,4 @@
-annotated-types==0.7.0
-anthropic==0.52.1
-anyio==4.9.0
-backoff==2.2.1
-beautifulsoup4==4.13.4
-blinker==1.9.0
-boto3==1.38.25
-botocore==1.38.25
-Brotli==1.1.0
-browser-use==0.2.5
-cachetools==5.5.2
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-cssselect2==0.8.0
-defusedxml==0.7.1
-distro==1.9.0
-faiss-cpu==1.11.0
-filetype==1.2.0
-Flask==3.1.1
-fonttools==4.58.1
-google-ai-generativelanguage==0.6.18
-google-api-core==2.24.2
-google-auth==2.40.2
-googleapis-common-protos==1.70.0
-greenlet==3.2.2
-groq==0.26.0
-grpcio==1.73.0rc1
-grpcio-status==1.73.0rc1
-h11==0.16.0
-h2==4.2.0
-hpack==4.1.0
-httpcore==1.0.9
-httpx==0.28.1
-hyperframe==6.1.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jiter==0.10.0
-jmespath==1.0.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.3.22
-langchain-anthropic==0.3.3
-langchain-aws==0.2.19
-langchain-core==0.3.49
-langchain-deepseek==0.1.3
-langchain-google-genai==2.1.2
-langchain-groq==0.3.2
-langchain-ollama==0.3.0
-langchain-openai==0.3.11
-langchain-text-splitters==0.3.7
-langsmith==0.3.43
-markdownify==1.1.0
-MarkupSafe==3.0.2
-mem0ai==0.1.93
-monotonic==1.6
-numpy==2.2.6
-ollama==0.4.9
-openai==1.82.0
-orjson==3.10.18
-packaging==24.2
-patchright==1.52.4
-pillow==11.2.1
-playwright==1.52.0
-portalocker==2.10.1
-posthog==3.25.0
-proto-plus==1.26.1
-protobuf==6.31.1
-psutil==7.0.0
-psycopg2-binary==2.9.10
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.10.6
-pydantic_core==2.27.2
-pydyf==0.11.0
-pyee==13.0.0
-pyperclip==1.9.0
-pyphen==0.17.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-pytz==2024.2
-pywin32==310
-PyYAML==6.0.2
-qdrant-client==1.14.2
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
-rsa==4.9.1
-s3transfer==0.13.0
-screeninfo==0.8.1
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.7
-SQLAlchemy==2.0.41
-tenacity==9.1.2
-tiktoken==0.9.0
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-tqdm==4.67.1
-typing_extensions==4.13.2
-urllib3==2.4.0
-uuid7==0.1.0
-weasyprint==65.1
-webencodings==0.5.1
-Werkzeug==3.1.3
-zopfli==0.2.3.post1
-zstandard==0.23.0
+browser-use
+flask
+pydantic
+dotenv
