--- a/settings.json
+++ b/settings.json
@@ -1,14 +1,18 @@
 {
-    "agent_llm": "gemini",
+    "agent_llm": "azure_openai",
     "agent_llm_args": {
-        "gemini_api_key": "<svg xmlns=\"http://www.w3.org/2000/svg\" x=\"0px\" y=\"0px\" width=\"100\" height=\"100\" viewBox=\"0 0 24 24\">     <path d=\"M 12 2 A 1 1 0 0 0 11.289062 2.296875 L 1.203125 11.097656 A 0.5 0.5 0 0 0 1 11.5 A 0.5 0.5 0 0 0 1.5 12 L 4 12 L 4 20 C 4 20.552 4.448 21 5 21 L 9 21 C 9.552 21 10 20.552 10 20 L 10 14 L 14 14 L 14 20 C 14 20.552 14.448 21 15 21 L 19 21 C 19.552 21 20 20.552 20 20 L 20 12 L 22.5 12 A 0.5 0.5 0 0 0 23 11.5 A 0.5 0.5 0 0 0 22.796875 11.097656 L 12.716797 2.3027344 A 1 1 0 0 0 12.710938 2.296875 A 1 1 0 0 0 12 2 z\"></path> </svg>",
-        "model-name": "gemini-2.0-flash-exp"
+        "azure_openai_api_key": "96d73255e5a7435eaac3a32c56d7829f",
+        "azure_openai_api_version": "2025-01-01-preview",
+        "azure_openai_api_endpoint": "https://cei-aoai.openai.azure.com/openai/deployments/gpt-4o-mini/chat/completions?api-version=2025-01-01-preview",
+        "model-name": "gpt-4o-mini"
     },
-    "planner_llm": "gemini",
+    "planner_llm": "azure_openai",
     "planner_llm_args": {
-        "gemini_api_key": "AIzaSyCY66ylwwUMy_yathgsfKM9ao4Zm_EL13Q",
-        "model-name": "gemini-2.0-flash-exp"
+        "azure_openai_api_key": "96d73255e5a7435eaac3a32c56d7829f",
+        "azure_openai_api_version": "2025-01-01-preview",
+        "azure_openai_api_endpoint": "https://cei-aoai.openai.azure.com/openai/deployments/gpt-4o-mini/chat/completions?api-version=2025-01-01-preview",
+        "model-name": "gpt-4o-mini"
     },
-    "headless_mode": false,
-    "highlight_elements": true
+    "headless_mode": true,
+    "highlight_elements": false
 }
