--- a/settings.json
+++ b/settings.json
@@ -1,16 +1,16 @@
 {
     "agent_llm": "azure_openai",
     "agent_llm_args": {
-        "azure_openai_api_key": "96d73255e5a7435eaac3a32c56d7829f",
+        "azure_openai_api_key": "xxxxx",
         "azure_openai_api_version": "2025-01-01-preview",
-        "azure_openai_api_endpoint": "https://cei-aoai.openai.azure.com/openai/deployments/gpt-4o-mini/chat/completions?api-version=2025-01-01-preview",
+        "azure_openai_api_endpoint": "xxxx",
         "model-name": "gpt-4o-mini"
     },
     "planner_llm": "azure_openai",
     "planner_llm_args": {
-        "azure_openai_api_key": "96d73255e5a7435eaac3a32c56d7829f",
+        "azure_openai_api_key": "xxxx",
         "azure_openai_api_version": "2025-01-01-preview",
-        "azure_openai_api_endpoint": "https://cei-aoai.openai.azure.com/openai/deployments/gpt-4o-mini/chat/completions?api-version=2025-01-01-preview",
+        "azure_openai_api_endpoint": "xxxx",
         "model-name": "gpt-4o-mini"
     },
     "headless_mode": true,
