--- a/tasks.json
+++ b/tasks.json
@@ -7,5 +7,14 @@
             "Flipkart",
             "Shopping"
         ]
+    },
+    {
+        "ID": 6,
+        "Task name": "Google for LED TVs",
+        "Task description": "Go to google.com, search for LED TVs and check it returned the results.",
+        "Tags": [
+            "google",
+            " ledtvs"
+        ]
     }
 ]
